# AudioInk

./: README.md  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: history.rs  mod.rs  models.rs  transcription.rs  youtube.rs
src-tauri/src/core/: audio.rs  mod.rs  models_manager.rs  speedup.rs  whisper.rs  youtube_dl.rs
src-tauri/src/models/: config.rs  mod.rs  transcription.rs
src-tauri/src/persistence/: history.rs
src-tauri/src/utils/: error.rs  mod.rs  platform.rs  subtitle.rs
